# gai_pdf_rag

./: .env  .env.template  .gitignore  README.md  pyproject.toml
app/: pdf_rag.py  server.py
